<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manual_launcher</name>
  <version>0.0.1</version>

  <description>
    This package contains launcher file to launch the nodes required for 
    manual control application.
  </description>

  <maintainer email="aws-deepracer@amazon.com">AWS DeepRacer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>servo_pkg</depend>
  <depend>deepracer-joy-control</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>